[package]
name = "digital_garden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.2"
directories = "4.0.1"
edit = "0.1.4"
rprompt = "1.0.5"
slug = "0.1.4"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.4"
